Closed
Bug 296335
Opened 20 years ago
Closed 20 years ago
setting maxWidth, minWidth properties (from javascript) doesn't work
Categories
(Core :: XUL, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: velcrospud, Assigned: mrbkap)
Details
(Keywords: fixed1.8, regression, testcase)
Attachments
(2 files)
|
554 bytes,
application/vnd.mozilla.xul+xml
|
Details | |
|
2.00 KB,
patch
|
bzbarsky
:
review+
bzbarsky
:
superreview+
cbeard
:
approval1.8b4+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b2) Gecko/20050531 Firefox/1.0+
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b2) Gecko/20050531 Firefox/1.0+
element.minWidth = 50;
or
element.maxWidth = 50;
doesn't do anything
Reproducible: Always
Steps to Reproduce:
| Reporter | ||
Comment 1•20 years ago
|
||
Comment 2•20 years ago
|
||
confirmed with linux trunk 2005050601. The bug started showing up between linux
trunk 2004091705 and 2004091806, so probably exposed by bug 296265
==> xul
Status: UNCONFIRMED → NEW
Component: Layout → XP Toolkit/Widgets: XUL
Ever confirmed: true
Keywords: testcase
OS: Windows XP → All
QA Contact: layout → xptoolkit.xul
Updated•20 years ago
|
Keywords: regression
Summary: maxWidth minWidth don't work from javascript → setting maxWidth, minWidth properties (from javascript) doesn't work
What bug number did you mean? That one doesn't seem right.
Comment 4•20 years ago
|
||
right. it was bug 253364
Updated•20 years ago
|
Flags: blocking1.8b4?
Flags: blocking-aviary1.5?
Flags: blocking-aviary1.0.7+
Updated•20 years ago
|
Flags: blocking-aviary1.0.7+
Updated•20 years ago
|
Flags: blocking1.8b4? → blocking1.8b4+
Comment 6•20 years ago
|
||
Blake - can you take a look since DBaron is currently out?
Assignee: dbaron → mrbkap
| Assignee | ||
Comment 7•20 years ago
|
||
It looks like this is exactly what we were doing before (simply calling
MarkDirty for these attributes) since we don't hit any of the inner
if-statements in this block.
Attachment #193478 -
Flags: superreview?(bzbarsky)
Attachment #193478 -
Flags: review?(bzbarsky)
| Assignee | ||
Updated•20 years ago
|
Status: NEW → ASSIGNED
Comment 8•20 years ago
|
||
Comment on attachment 193478 [details] [diff] [review]
add (min|max)(Width|Height) to the MarkDirty path
Make those nice || line up with the rest of them, and r+sr=bzbarsky
Attachment #193478 -
Flags: superreview?(bzbarsky)
Attachment #193478 -
Flags: superreview+
Attachment #193478 -
Flags: review?(bzbarsky)
Attachment #193478 -
Flags: review+
| Assignee | ||
Comment 9•20 years ago
|
||
Comment on attachment 193478 [details] [diff] [review]
add (min|max)(Width|Height) to the MarkDirty path
This is a safe fix to squish a regression.
Attachment #193478 -
Flags: approval1.8b4?
Updated•20 years ago
|
Attachment #193478 -
Flags: approval1.8b4? → approval1.8b4+
| Assignee | ||
Comment 10•20 years ago
|
||
Fix checked in to MOZILLA_1_8_BRANCH and trunk.
Component: XP Toolkit/Widgets: XUL → XUL
QA Contact: xptoolkit.xul → xptoolkit.widgets
You need to log in
before you can comment on or make changes to this bug.
Description
•