bug 296335: Setting minWidth and maxWidth on a XUL element doesn't reflow the element. r+sr=bzbarsky